Closed
Bug 343762
Opened 19 years ago
Closed 19 years ago
Zoom All zooms downloads window (even when it's not visible)
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.5
People
(Reporter: froodian, Assigned: froodian)
References
Details
(Keywords: fixed1.8.1)
Attachments
(2 files)
1.07 KB,
patch
|
Details | Diff | Splinter Review | |
1.13 KB,
patch
|
hwaara
:
review+
froodian
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
Oops. My patch for bug 181978 zooms the downloads window even when it's not visible. STR:
1. Open a browser window (ensuring that the downloads window is closed)
2. Zoom all
3. Open downloads window
This is a good time for a little more discussion on whether we want the downloads window to zoom at all. I say that it's the app-wide windows menu, and people expect its actions to work on all windows, so we should. Obviously though, whatever we decide, it should zoom the window if it's not open. (It's an easy fix either way, btw)
Comment 1•19 years ago
|
||
I think all visible windows should be zoomed.
Comment 2•19 years ago
|
||
I don't think the Downloads window should be zoomed. The Downloads window, in my user experience, is an honorary utility panel. It's not the main event, and its zoom behavior, while appropriate, is quite different from other windows'. I wouldn't expect it to zoom.
Assignee | ||
Comment 3•19 years ago
|
||
This solution zooms all windows, just only if they're open.
Assignee | ||
Comment 4•19 years ago
|
||
This patch only zooms browser windows.
Once we figure out which of these solutions we want, we can set the review flags on the appropriate patch.
I'm with Peter on this one; I think people are more likely going to want all of their browser windows to go full-screen than their browser windows and downloads.
OTOH, it's a fairly harmless action and Safari zooms *all* open windows (even the activity window), so I could be convinced either way.
Comment 6•19 years ago
|
||
When I Zoom the downloads window now, it doesn't go full-screen. It resizes to fit its content.
Is that not what other people are seeing? Because that behaviour seems perfectly reasonable to me.
cl
Comment 7•19 years ago
|
||
it's an easy fix, i say we go with not zooming non-browser windows and we can always pull that out if people complain.
Assignee | ||
Updated•19 years ago
|
Attachment #228390 -
Flags: review?(hwaara)
Updated•19 years ago
|
Attachment #228390 -
Flags: review?(hwaara) → review+
Assignee | ||
Updated•19 years ago
|
Attachment #228390 -
Flags: review?(nick.kreeger)
Assignee | ||
Comment 8•19 years ago
|
||
Comment on attachment 228390 [details] [diff] [review]
Don't Zoom Downloads Solution
r=cl per irc
Attachment #228390 -
Flags: review?(nick.kreeger) → review+
Assignee | ||
Updated•19 years ago
|
Attachment #228390 -
Flags: superreview?(mikepinkerton)
Comment 9•19 years ago
|
||
Comment on attachment 228390 [details] [diff] [review]
Don't Zoom Downloads Solution
sr=pink
Attachment #228390 -
Flags: superreview?(mikepinkerton) → superreview+
Assignee | ||
Updated•19 years ago
|
Whiteboard: [needs checkin]
Comment 10•19 years ago
|
||
Roasting on trunk and branch.
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Assignee | ||
Updated•19 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•