Fixing bug 343762, zoom-all zooms downloads window event when it is not visible. Patch by froodian <stridey@gmail.com>, r=hwaara, chris lawson, sr=pink.